# TradeCopierX

./: .gitignore  Cargo.toml  README.md
src/: README.md  ReadMe.md  client.rs  config.rs  copier.rs  main.rs  models.rs  rtc.rs
